add paragraph to code

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Git website</title>
-</head>
-<body>
-  <h1>
-    Lorem ipsum dolor sit amet consectetur.
-  </h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Git website</title>
+  </head>
+  <body>
+    <h1>
+      Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet
+      consectetur adipisicing elit. Alias, explicabo. Commodi exercitationem
+      inventore iste culpa assumenda dolore in animi quibusdam odit nulla?
+      Molestiae nulla explicabo harum esse, soluta quidem non.
+    </h1>
+  </body>
 </html>
