--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
   </head>
   <body>
     <h1>
-      Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet
+      <p>Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet
       consectetur adipisicing elit. Alias, explicabo. Commodi exercitationem
       inventore iste culpa assumenda dolore in animi quibusdam odit nulla?
       Molestiae nulla explicabo harum esse, soluta quidem non.
+    </p>
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li> 
+      <li>Item 3</li>
+    </ul>
     </h1>
   </body>
 </html>
